--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,48 @@
-body {
+/* Colors */
+:root {
+  --light-green: #00a884;
+  --bright-green: #06cf9c;
+  --black: #111b21;
+  --light-black: #364147;
+
+  --font-base: #41525d;
+  --font-green: #02725f;
+
+  --bg-white: #fff;
+}
+
+/* Fonts */
+@font-face {
+  font-family: "Consolas";
+  src: local("Consolas"), url("./assets/fonts/Consolas.ttf") format("truetype");
+}
+
+/* Main settings */
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding: 0;
+}
+
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Consolas", "Segoe UI",
+    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+    "Helvetica Neue", sans-serif;
+  color: var(--font-base);
+  font-weight: 100;
+
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
+html,
+body,
+#root {
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+}
+
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
